--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     <title>MedCare Hospital - Leading Healthcare Provider</title>
 
     <!-- Preload critical resources -->
-    <link rel="preload" href="/assets/css/main.css" as="style">
-    <link rel="preload" href="/assets/js/main.js" as="script">
+    <link rel="preload" href="assets/css/main.css" as="style">
+    <link rel="preload" href="assets/js/main.js" as="script">
 
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="icon" type="image/svg+xml" href="assets/images/favicon.svg">
     <link rel="canonical" href="https://medcare-hospital.com/">
 
     <!-- JSON-LD Structured Data -->
