--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
     <meta name="description" content="Learn about MedCare Hospital's mission, values, and commitment to providing exceptional healthcare services with experienced medical professionals.">
     <title>About Us - MedCare Hospital</title>
     
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="icon" type="image/svg+xml" href="assets/images/favicon.svg">
     <link rel="canonical" href="https://medcare-hospital.com/about.html">
     
     <script type="application/ld+json">
@@ -456,6 +456,6 @@
         </div>
     </footer>
 
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
