--- a/index.html
+++ b/index.html
@@ -108,22 +108,22 @@
                         <a href="/" class="nav__link nav__link--active" role="menuitem">Home</a>
                     </li>
                     <li class="nav__item" role="none">
-                        <a href="/about.html" class="nav__link" role="menuitem">About</a>
+                        <a href="about.html" class="nav__link" role="menuitem">About</a>
                     </li>
                     <li class="nav__item" role="none">
-                        <a href="/services.html" class="nav__link" role="menuitem">Services</a>
+                        <a href="services.html" class="nav__link" role="menuitem">Services</a>
                     </li>
                     <li class="nav__item" role="none">
-                        <a href="/doctors.html" class="nav__link" role="menuitem">Doctors</a>
+                        <a href="doctors.html" class="nav__link" role="menuitem">Doctors</a>
                     </li>
                     <li class="nav__item" role="none">
-                        <a href="/appointments.html" class="nav__link" role="menuitem">Appointments</a>
+                        <a href="appointments.html" class="nav__link" role="menuitem">Appointments</a>
                     </li>
                     <li class="nav__item" role="none">
-                        <a href="/contact.html" class="nav__link" role="menuitem">Contact</a>
+                        <a href="contact.html" class="nav__link" role="menuitem">Contact</a>
                     </li>
                     <li class="nav__item" role="none">
-                        <a href="/blog.html" class="nav__link" role="menuitem">Blog</a>
+                        <a href="blog.html" class="nav__link" role="menuitem">Blog</a>
                     </li>
                 </ul>
 
@@ -159,8 +159,8 @@
                         experienced medical professionals dedicated to your well-being.
                     </p>
                     <div class="hero__actions">
-                        <a href="/appointments.html" class="btn btn--primary hero__cta">Book Appointment</a>
-                        <a href="/services.html" class="btn btn--secondary">Our Services</a>
+                        <a href="appointments.html" class="btn btn--primary hero__cta">Book Appointment</a>
+                        <a href="services.html" class="btn btn--secondary">Our Services</a>
                     </div>
                 </div>
                 <div class="hero__image">
